+minor fixes(i18n, default values in database)

--- a/resources/resources_ua.properties
+++ b/resources/resources_ua.properties
@@ -58,7 +58,7 @@ edit_user_jsp.title_user = Користувач
 edit_user_jsp.edit_user = Налаштування користувача
 edit_user_jsp.your_login = Ваш логін
 edit_user_jsp.your_discount = Ваша поточна знижка
-edit_user_jsp.save_changes = Save changes
+edit_user_jsp.save_changes = Зберегти зміни
 cars_with_another_type.choose_type = Виберіть інший тип таксі
 cars_with_another_type.go_back = Повернутися
 error_page.error = Помилка
@@ -83,6 +83,7 @@ admin_page.table.time = Час створення
 admin_page.table.state = Стан
 admin_page.page.next = Наступна
 admin_page.page.previous = Попередня
+admin_page.table.more = Більше
 receipt_info_jsp.title = Інформація о замовлені
 receipt_info_jsp.order = Замовлення
 receipt_info_jsp.login = Логін
@@ -100,3 +101,5 @@ receipt_info_jsp.back = Повернутися
 state.created = Створений
 state.confirmed = Підтверджений
 state.done = Виконаний
+locale_en = Англійська [English]
+locale_ua = Українська
